# zimran-py-events

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/scripts/: release.py
.github/workflows/: publish.yml  release.yml
tests/: test_legacy_scheme.py  test_utils.py
zimran/events/: __init__.py  _abstracts.py  _consumer.py  _producer.py  connection.py  constants.py  consumer.py  dto.py  exceptions.py  mixins.py  patterns.py  producer.py  router.py  schemas.py  utils.py
