[build-system]
requires = ["setuptools>=67.4.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "zimran-events"
version = "0.5.4"
authors = [
  { name="Talgat Abdraimov", email="abdraimov.talga@gmail.com" },
]
description = "The zimran-events provides amqp interface"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = ["pika==1.3.2", "aio-pika==9.3.1", "aioretry==5.0.2"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
  "black",

  "pytest",
  "pytest-cov",

  "flake8",
  "flake8-print",
  "flake8-multiline-containers",
  "flake8-builtins",
  "flake8-import-order",
  "flake8-commas",
  "flake8-quotes",
]

[project.urls]
homepage = "https://github.com/zimran-tech/zimran-py-events"
repository = "https://github.com/zimran-tech/zimran-py-events.git"
bugtracker = "https://github.com/zimran-tech/zimran-py-events/issues"
changelog = "https://github.com/zimran-tech/zimran-py-events/releases"

[tool.setuptools_scm]


[tool.black]
line-length=120
target-version=['py310']
skip-string-normalization=true
